Fix some issues detected by the new Sonar profile (#2671)
* java:S6201 rule: instanceof
* Fix remplacement for java:S6201 rule
* Quality: rename some variables
* Fix code smells - provide the parametrized type for this generic
* Fix code smell - merge this if statement with the enclosing one
* java S6353 rule: concise regular expression quantifiers
* Fix some obvious java:S6024 issues
---------

Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>
Signed-off-by: Sophie Frasnedo <sophie.frasnedo@rte-france.com>
Co-authored-by: Sophie Frasnedo <sophie.frasnedo@rte-france.com>